bug 462314 - Refactor test_aria_activedescendant.html, r=surkov
UltraBlame original commit: 1ac20b494c0f8e5a133919160130165450bcceca

--- a/accessible/tests/mochitest/test_aria_activedescendant.html
+++ b/accessible/tests/mochitest/test_aria_activedescendant.html
@@ -36,8 +36,10 @@ head
 <
 title
 >
-Table
-indexes
+aria
+-
+activedescendant
+property
 chrome
 tests
 <
@@ -152,31 +154,46 @@ application
 /
 javascript
 "
->
-const
-nsIAccessibleRetrieval
+src
 =
-Components
+"
+chrome
+:
+/
+/
+mochikit
+/
+content
+/
+a11y
+/
+accessible
+/
+common
 .
-interfaces
-.
-nsIAccessibleRetrieval
-;
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+application
+/
+javascript
+"
+>
 const
 ELEMENT_NODE
 =
-Components
-.
-interfaces
-.
 nsIDOMNode
 .
 ELEMENT_NODE
-;
-var
-gAccRetrieval
-=
-null
 ;
 var
 gContainerFocused
@@ -261,85 +278,13 @@ focusHandler
 false
 )
 ;
-gAccRetrieval
-=
-Components
-.
-classes
-[
-"
-mozilla
-.
-org
-/
-accessibleRetrieval
-;
-1
-"
-]
-.
-getService
-(
-nsIAccessibleRetrieval
-)
-;
-var
-item2
-=
-document
-.
-getElementById
-(
-"
-item2
-"
-)
-;
 var
 item2Acc
 =
-null
-;
-try
-{
-item2Acc
-=
-gAccRetrieval
-.
-getAccessibleFor
+getAccessible
 (
-item2
-)
-;
-}
-catch
-(
-e
-)
-{
-}
-ok
-(
-item2Acc
 "
-The
-element
-with
-ID
-and
-an
-ancestor
-with
-'
-aria
--
-activedescedant
-'
-attribute
-should
-be
-accessible
-.
+item2
 "
 )
 ;
@@ -347,6 +292,7 @@ if
 (
 item2Acc
 )
+{
 item2Acc
 .
 takeFocus
@@ -360,15 +306,27 @@ gContainerFocused
 Container
 with
 active
-descedant
+descendant
 didn
 '
 t
-recieved
+receive
 the
 focus
 .
 "
+)
+;
+}
+container
+.
+removeEventListener
+(
+"
+focus
+"
+focusHandler
+false
 )
 ;
 SimpleTest
