bug 462316 - Refactor test_aria_role_article.html, r=surkov
UltraBlame original commit: 443f9092eba5a61071bf072aad7b044c5f8c42f6

--- a/accessible/tests/mochitest/test_aria_role_article.html
+++ b/accessible/tests/mochitest/test_aria_role_article.html
@@ -159,39 +159,45 @@ application
 /
 javascript
 "
+src
+=
+"
+chrome
+:
+/
+/
+mochikit
+/
+content
+/
+a11y
+/
+accessible
+/
+common
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+application
+/
+javascript
+"
 >
 function
 doTest
 (
 )
 {
-var
-accRetrieval
-=
-Components
-.
-classes
-[
-"
-mozilla
-.
-org
-/
-accessibleRetrieval
-;
-1
-"
-]
-.
-getService
-(
-Components
-.
-interfaces
-.
-nsIAccessibleRetrieval
-)
-;
 /
 /
 Test
@@ -200,49 +206,12 @@ exposed
 as
 document
 var
-articleElement
+articleAcc
 =
-document
-.
-getElementById
+getAccessible
 (
 "
 testArticle
-"
-)
-;
-var
-articleAcc
-=
-null
-;
-try
-{
-articleAcc
-=
-accRetrieval
-.
-getAccessibleFor
-(
-articleElement
-)
-;
-}
-catch
-(
-e
-)
-{
-}
-ok
-(
-articleAcc
-"
-no
-accessible
-for
-article
-!
 "
 )
 ;
@@ -256,12 +225,6 @@ is
 articleAcc
 .
 finalRole
-Components
-.
-interfaces
-.
-nsIAccessibleRole
-.
 ROLE_DOCUMENT
 "
 Wrong
