bug 462350 - Refactor and rename test_bug428479.html to test_aria_role_equation.html, r=surkov
UltraBlame original commit: 7c03312dd190eadb91ee867ce4a119ad4e9cdc97

--- a/accessible/tests/mochitest/test_aria_role_equation.html
+++ b/accessible/tests/mochitest/test_aria_role_equation.html
@@ -153,25 +153,64 @@ application
 /
 javascript
 "
+src
+=
+"
+chrome
+:
+/
+/
+mochikit
+/
+content
+/
+a11y
+/
+accessible
+/
+common
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+application
+/
+javascript
+"
 >
 function
 testThis
 (
 aID
-aAcc
+)
+{
+var
+eqAcc
+=
+getAccessible
+(
+aID
+)
+;
+if
+(
+eqAcc
 )
 {
 is
 (
-aAcc
+eqAcc
 .
 finalRole
-Components
-.
-interfaces
-.
-nsIAccessibleRole
-.
 ROLE_FLAT_EQUATION
 "
 Wrong
@@ -188,7 +227,7 @@ aID
 ;
 is
 (
-aAcc
+eqAcc
 .
 name
 "
@@ -218,99 +257,22 @@ aID
 )
 ;
 }
+}
 function
 doTest
 (
 )
 {
-var
-accRetrieval
-=
-Components
-.
-classes
-[
-"
-mozilla
-.
-org
-/
-accessibleRetrieval
-;
-1
-"
-]
-.
-getService
-(
-Components
-.
-interfaces
-.
-nsIAccessibleRetrieval
-)
-;
 /
 /
 Test
 equation
 image
-var
-imgEqElement
-=
-document
-.
-getElementById
-(
-"
-img_eq
-"
-)
-;
-var
-imgEqAcc
-;
-try
-{
-imgEqAcc
-=
-accRetrieval
-.
-getAccessibleFor
-(
-imgEqElement
-)
-;
-}
-catch
-(
-e
-)
-{
-}
-ok
-(
-imgEqAcc
-"
-no
-accessible
-for
-image
-equation
-!
-"
-)
-;
-if
-(
-imgEqAcc
-)
 testThis
 (
 "
 img_eq
 "
-imgEqAcc
 )
 ;
 /
@@ -318,62 +280,11 @@ imgEqAcc
 Test
 textual
 equation
-var
-txtEqElement
-=
-document
-.
-getElementById
-(
-"
-txt_eq
-"
-)
-;
-var
-txtEqAcc
-;
-try
-{
-txtEqAcc
-=
-accRetrieval
-.
-getAccessibleFor
-(
-txtEqElement
-)
-;
-}
-catch
-(
-e
-)
-{
-}
-ok
-(
-txtEqAcc
-"
-no
-accessible
-for
-textual
-equation
-!
-"
-)
-;
-if
-(
-txtEqAcc
-)
 testThis
 (
 "
 txt_eq
 "
-txtEqAcc
 )
 ;
 SimpleTest
