Don't require a minimum data threshold for encodings that correspond to the selected language. Bug 431054, r=Masatoshi Kimura (:emk) <VYV03354nifty.ne.jp>
UltraBlame original commit: f1bb0f862b5b6b7afb3988df60affc5f8be23c71

--- a/extensions/universalchardet/tests/test_bug431054-japanese.html
+++ b/extensions/universalchardet/tests/test_bug431054-japanese.html
@@ -26,7 +26,7 @@ cgi
 ?
 id
 =
-306272
+431054
 -
 -
 >
@@ -39,7 +39,7 @@ title
 Test
 for
 Bug
-306272
+431054
 <
 /
 title
@@ -176,12 +176,12 @@ cgi
 ?
 id
 =
-306272
+426271
 "
 >
 Mozilla
 Bug
-306272
+431054
 <
 /
 a
@@ -258,42 +258,27 @@ javascript
 Test
 for
 Bug
-306272
+431054
 *
 *
 /
 CharsetDetectionTests
 (
 "
-bug306272_text
+bug431054_text
 .
 html
 "
 "
-UTF
+EUC
 -
-8
+JP
 "
 new
 Array
 (
 "
 ja_parallel_state_machine
-"
-"
-zh_parallel_state_machine
-"
-"
-zhtw_parallel_state_machine
-"
-"
-zhcn_parallel_state_machine
-"
-"
-cjk_parallel_state_machine
-"
-"
-universal_charset_detector
 "
 )
 )
