--- a/extensions/universalchardet/tests/test_bug431054.html
+++ b/extensions/universalchardet/tests/test_bug431054.html
@@ -26,7 +26,7 @@ cgi
 ?
 id
 =
-306272
+431054
 -
 -
 >
@@ -39,7 +39,7 @@ title
 Test
 for
 Bug
-306272
+431054
 <
 /
 title
@@ -176,12 +176,12 @@ cgi
 ?
 id
 =
-306272
+426271
 "
 >
 Mozilla
 Bug
-306272
+431054
 <
 /
 a
@@ -258,36 +258,33 @@ javascript
 Test
 for
 Bug
-306272
+431054
 *
 *
 /
 CharsetDetectionTests
 (
 "
-bug306272_text
+bug431054_text
 .
 html
 "
 "
-UTF
+windows
 -
-8
+1252
 "
 new
 Array
 (
 "
-ja_parallel_state_machine
-"
-"
-zh_parallel_state_machine
-"
-"
 zhtw_parallel_state_machine
 "
 "
 zhcn_parallel_state_machine
+"
+"
+zh_parallel_state_machine
 "
 "
 cjk_parallel_state_machine
