Bug 280136 - Remove GetFinalState(), r=davidb
UltraBlame original commit: ed2e583d9edfdc6844869bb96f3bd0d636f3f3b2

--- a/accessible/tests/mochitest/test_bug429285.html
+++ b/accessible/tests/mochitest/test_bug429285.html
@@ -240,7 +240,7 @@ extraState
 ;
 aAcc
 .
-getFinalState
+getState
 (
 state
 extraState
@@ -479,7 +479,7 @@ extraState
 ;
 groupAcc
 .
-getFinalState
+getState
 (
 state
 extraState
