Bug 443023: Associate documents with their caches after an initial update.  r=honzab, r+sr=biesi
UltraBlame original commit: b5fcc6701197028bd1cf2aa36fcade10b2786774

--- a/dom/tests/mochitest/ajax/offline/test_simpleManifest.html
+++ b/dom/tests/mochitest/ajax/offline/test_simpleManifest.html
@@ -598,12 +598,81 @@ invalid
 false
 )
 ;
+OfflineTest
+.
+is
+(
+applicationCache
+.
+status
+1
+"
+Cache
+status
+should
+be
+1
+(
+CACHED
+)
+"
+)
+;
+try
+{
 applicationCache
 .
 swapCache
 (
 )
 ;
+OfflineTest
+.
+ok
+(
+false
+"
+application
+.
+swapCache
+(
+)
+should
+fail
+after
+initial
+update
+.
+"
+)
+;
+}
+catch
+(
+ex
+)
+{
+OfflineTest
+.
+ok
+(
+true
+"
+application
+.
+swapCache
+(
+)
+should
+fail
+after
+initial
+update
+.
+"
+)
+;
+}
 /
 /
 XXX
