--- a/dom/tests/mochitest/ajax/offline/test_simpleManifest.html
+++ b/dom/tests/mochitest/ajax/offline/test_simpleManifest.html
@@ -162,6 +162,34 @@ gGotDownloading
 =
 false
 ;
+ok
+(
+applicationCache
+.
+items
+.
+length
+=
+=
+0
+"
+applicationCache
+.
+items
+should
+be
+available
+and
+empty
+before
+associating
+with
+a
+cache
+.
+"
+)
+;
 function
 addFinished
 (
@@ -217,6 +245,10 @@ have
 one
 dynamic
 entry
+(
+deprecated
+API
+)
 "
 )
 ;
@@ -261,6 +293,116 @@ the
 one
 we
 expect
+(
+deprecated
+API
+)
+"
+)
+;
+OfflineTest
+.
+ok
+(
+applicationCache
+.
+items
+.
+length
+=
+=
+1
+"
+applicationCache
+should
+have
+one
+dynamic
+entry
+"
+)
+;
+OfflineTest
+.
+ok
+(
+applicationCache
+.
+items
+[
+0
+]
+=
+=
+"
+http
+:
+/
+/
+localhost
+:
+8888
+/
+tests
+/
+SimpleTest
+/
+EventUtils
+.
+js
+"
+"
+applicationCache
+'
+s
+dynamic
+entry
+should
+be
+the
+one
+we
+expect
+"
+)
+;
+OfflineTest
+.
+ok
+(
+applicationCache
+.
+hasItem
+(
+"
+http
+:
+/
+/
+localhost
+:
+8888
+/
+tests
+/
+SimpleTest
+/
+EventUtils
+.
+js
+"
+)
+"
+applicationCache
+.
+hasItem
+(
+)
+should
+see
+the
+dynamic
+entry
 "
 )
 ;
@@ -335,6 +477,75 @@ have
 no
 dynamic
 entries
+(
+deprecated
+API
+)
+"
+)
+;
+OfflineTest
+.
+ok
+(
+applicationCache
+.
+items
+.
+length
+=
+=
+0
+"
+applicationCache
+should
+have
+no
+dynamic
+entries
+"
+)
+;
+OfflineTest
+.
+ok
+(
+!
+applicationCache
+.
+hasItem
+(
+"
+http
+:
+/
+/
+localhost
+:
+8888
+/
+tests
+/
+SimpleTest
+/
+EventUtils
+.
+js
+"
+)
+"
+applicationCache
+.
+hasItem
+(
+)
+should
+not
+see
+the
+removed
+dynamic
+entry
 "
 )
 ;
