Bug 460811 - 'Bring workers up to latest spec'.r+sr=jst
UltraBlame original commit: b83d3c8ac166e5f92f36fa44df498e74efd41832

--- a/dom/src/threads/test/test_fibonacci.html
+++ b/dom/src/threads/test/test_fibonacci.html
@@ -15,8 +15,8 @@ of
 DOM
 Worker
 Threads
-RegExp
-statics
+with
+Fibonacci
 -
 -
 >
@@ -31,8 +31,8 @@ for
 DOM
 Worker
 Threads
-RegExp
-statics
+with
+Fibonacci
 <
 /
 title
@@ -123,6 +123,43 @@ head
 body
 >
 <
+a
+target
+=
+"
+_blank
+"
+href
+=
+"
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+450452
+"
+>
+DOM
+Worker
+Threads
+Fibonacci
+<
+/
+a
+>
+<
 p
 id
 =
@@ -176,32 +213,44 @@ text
 javascript
 "
 >
-const
-WORKER_COUNT
-=
-25
-;
 var
-doneWorkers
+worker
 =
-0
+new
+Worker
+(
+"
+fibonacci_worker
+.
+js
+"
+)
 ;
-function
+worker
+.
 onmessage
+=
+function
 (
 event
 )
 {
-if
+is
 (
-+
-+
-doneWorkers
-=
-=
-WORKER_COUNT
+event
+.
+target
+worker
 )
-{
+;
+is
+(
+event
+.
+data
+5
+)
+;
 SimpleTest
 .
 finish
@@ -209,13 +258,24 @@ finish
 )
 ;
 }
-}
-function
+;
+worker
+.
 onerror
+=
+function
 (
 event
 )
 {
+is
+(
+event
+.
+target
+worker
+)
+;
 ok
 (
 false
@@ -240,57 +300,13 @@ finish
 ;
 }
 ;
-for
-(
-var
-i
-=
-0
-;
-i
-<
-WORKER_COUNT
-;
-i
-+
-+
-)
-{
-var
-worker
-=
-new
-Worker
-(
-"
-regExpStatics_worker
-.
-js
-"
-)
-;
-worker
-.
-onmessage
-=
-onmessage
-;
-worker
-.
-onerror
-=
-onerror
-;
 worker
 .
 postMessage
 (
-"
-start
-"
+5
 )
 ;
-}
 SimpleTest
 .
 waitForExplicitFinish
