--- a/dom/src/threads/test/test_longThread.html
+++ b/dom/src/threads/test/test_longThread.html
@@ -218,254 +218,27 @@ text
 javascript
 "
 >
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
-(
-'
-UniversalXPConnect
-'
-)
-;
-var
-prefs
-=
-Components
-.
-classes
-[
-"
-mozilla
-.
-org
-/
-preferences
--
-service
-;
-1
-"
-]
-.
-getService
-(
-Components
-.
-interfaces
-.
-nsIPrefBranch
-)
-;
-/
-/
-prefs
-.
-setIntPref
-(
-"
-javascript
-.
-options
-.
-gczeal
-"
-2
-)
-;
-var
-workerScript
-=
-"
-function
-messageListener
-(
-message
-source
-)
-{
-"
-+
-"
-switch
-(
-message
-)
-{
-"
-+
-"
-case
-'
-start
-'
-:
-"
-+
-"
-/
-*
-do
-a
-ton
-of
-stuff
-!
-*
-/
-"
-+
-"
-for
-(
-var
-i
-=
-0
-;
-i
-<
-10000000
-;
-i
-+
-+
-)
-{
-}
-"
-+
-"
-dump
-(
-'
-done
-!
-\
-\
-n
-'
-)
-;
-"
-+
-"
-/
-*
-pass
-message
-to
-source
-*
-/
-"
-+
-"
-source
-.
-postMessage
-(
-'
-done
-'
-)
-;
-"
-+
-"
-break
-;
-"
-+
-"
-default
-:
-"
-+
-"
-throw
-'
-Bad
-message
-:
-'
-+
-message
-;
-"
-+
-"
-}
-"
-+
-"
-}
-"
-+
-"
-"
-;
-var
-pool
-=
-navigator
-.
-newWorkerPool
-(
-)
-;
-ok
-(
-pool
-"
-Couldn
-'
-t
-get
-worker
-pool
-"
-)
-;
 const
 numThreads
 =
-10
+5
 ;
 var
 doneThreads
 =
 0
 ;
-pool
-.
-messageListener
-=
 function
+onmessage
 (
-message
-source
+event
 )
 {
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
-(
-'
-UniversalXPConnect
-'
-)
-;
 switch
 (
-message
+event
+.
+data
 )
 {
 case
@@ -483,20 +256,6 @@ doneThreads
 numThreads
 )
 {
-prefs
-.
-setIntPref
-(
-"
-javascript
-.
-options
-.
-gczeal
-"
-0
-)
-;
 SimpleTest
 .
 finish
@@ -517,20 +276,6 @@ message
 "
 )
 ;
-prefs
-.
-setIntPref
-(
-"
-javascript
-.
-options
-.
-gczeal
-"
-0
-)
-;
 SimpleTest
 .
 finish
@@ -539,30 +284,12 @@ finish
 ;
 }
 }
-;
-pool
-.
-errorListener
-=
 function
+onerror
 (
-error
-source
+event
 )
 {
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
-(
-'
-UniversalXPConnect
-'
-)
-;
 ok
 (
 false
@@ -574,20 +301,6 @@ error
 "
 )
 ;
-prefs
-.
-setIntPref
-(
-"
-javascript
-.
-options
-.
-gczeal
-"
-0
-)
-;
 SimpleTest
 .
 finish
@@ -595,7 +308,6 @@ finish
 )
 ;
 }
-;
 for
 (
 var
@@ -615,12 +327,27 @@ i
 var
 worker
 =
-pool
-.
-createWorker
+new
+Worker
 (
-workerScript
+"
+longThread_worker
+.
+js
+"
 )
+;
+worker
+.
+onmessage
+=
+onmessage
+;
+worker
+.
+onerror
+=
+onerror
 ;
 worker
 .
