--- a/dom/src/threads/test/test_recursion.html
+++ b/dom/src/threads/test/test_recursion.html
@@ -173,76 +173,45 @@ text
 javascript
 "
 >
-function
-workerScript
-(
-)
-{
-function
-recurse
-(
-)
-{
-recurse
-(
-)
-;
-}
-this
-.
-messageListener
-=
-function
-(
-message
-source
-)
-{
-switch
-(
-message
-)
-{
-case
-"
-start
-"
-:
-recurse
-(
-)
-;
-break
-;
-default
-:
-}
-}
-}
 var
-pool
+worker
 =
-navigator
-.
-newWorkerPool
+new
+Worker
 (
+"
+recursion_worker
+.
+js
+"
 )
 ;
-pool
+worker
 .
-errorListener
+onerror
 =
 function
 (
-error
-source
+event
 )
 {
+dump
+(
+event
+.
+data
++
+"
+\
+n
+"
+)
+;
 is
 (
-error
+event
 .
-message
+data
 '
 [
 JavaScript
@@ -257,16 +226,34 @@ recursion
 file
 :
 "
-DOMWorker
-inline
+http
+:
+/
+/
+localhost
+:
+8888
 '
 +
 '
-script
+/
+tests
+/
+dom
+/
+src
+/
+threads
+/
+tests
+/
+recursion_worker
+.
+js
 "
 line
 :
-4
+2
 }
 ]
 '
@@ -279,27 +266,6 @@ finish
 )
 ;
 }
-var
-worker
-=
-pool
-.
-createWorker
-(
-"
-(
-"
-+
-workerScript
-+
-"
-)
-(
-)
-;
-"
-)
-;
 worker
 .
 postMessage
