--- a/dom/src/threads/test/test_simpleThread.html
+++ b/dom/src/threads/test/test_simpleThread.html
@@ -218,338 +218,44 @@ text
 javascript
 "
 >
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
-(
-'
-UniversalXPConnect
-'
-)
-;
 var
-prefs
-=
-Components
-.
-classes
-[
-"
-mozilla
-.
-org
-/
-preferences
--
-service
-;
-1
-"
-]
-.
-getService
-(
-Components
-.
-interfaces
-.
-nsIPrefBranch
-)
-;
-/
-/
-prefs
-.
-setIntPref
-(
-"
-javascript
-.
-options
-.
-gczeal
-"
-2
-)
-;
-var
-workerScript
-=
-"
-function
-messageListener
-(
-message
-source
-)
-{
-"
-+
-"
-switch
-(
-message
-)
-{
-"
-+
-"
-case
-'
-no
--
-op
-'
-:
-"
-+
-"
-break
-;
-"
-+
-"
-case
-'
-start
-'
-:
-"
-+
-"
-/
-*
-do
-a
-ton
-of
-stuff
-!
-*
-/
-"
-+
-"
-for
-(
-var
-i
-=
-0
-;
-i
-<
-1000
-;
-i
-+
-+
-)
-{
-}
-"
-+
-"
-/
-*
-pass
-message
-to
-source
-*
-/
-"
-+
-"
-source
-.
-postMessage
-(
-'
-started
-'
-)
-;
-"
-+
-"
-break
-;
-"
-+
-"
-case
-'
-stop
-'
-:
-"
-+
-"
-/
-*
-do
-some
-more
-stuff
-!
-*
-/
-"
-+
-"
-for
-(
-var
-i
-=
-0
-;
-i
-<
-1000
-;
-i
-+
-+
-)
-{
-}
-"
-+
-"
-/
-*
-pass
-message
-to
-self
-*
-/
-"
-+
-"
-threadContext
-.
-thisThread
-.
-postMessage
-(
-'
-no
--
-op
-'
-)
-;
-"
-+
-"
-/
-*
-pass
-message
-to
-pool
-*
-/
-"
-+
-"
-postMessageToPool
-(
-'
-stopped
-'
-)
-;
-"
-+
-"
-break
-;
-"
-+
-"
-default
-:
-"
-+
-"
-throw
-'
-Bad
-message
-:
-'
-+
-message
-;
-"
-+
-"
-}
-"
-+
-"
-}
-"
-+
-"
-"
-;
-var
-pool
-=
-navigator
-.
-newWorkerPool
-(
-)
-;
-ok
-(
-pool
-"
-Couldn
-'
-t
-get
 worker
-pool
+=
+new
+Worker
+(
+"
+simpleThread_worker
+.
+js
 "
 )
 ;
-pool
+worker
 .
-messageListener
-=
+addEventListener
+(
+"
+message
+"
 function
 (
-message
-source
+event
 )
 {
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
+is
 (
-'
-UniversalXPConnect
-'
+event
+.
+target
+worker
 )
 ;
 switch
 (
-message
+event
+.
+data
 )
 {
 case
@@ -566,13 +272,13 @@ case
 started
 "
 :
-/
-/
-pass
-message
-to
-self
-pool
+is
+(
+gotError
+true
+)
+;
+worker
 .
 postMessage
 (
@@ -583,13 +289,7 @@ op
 "
 )
 ;
-/
-/
-pass
-message
-to
-source
-source
+worker
 .
 postMessage
 (
@@ -605,12 +305,6 @@ case
 stopped
 "
 :
-/
-/
-pass
-message
-to
-worker
 worker
 .
 postMessage
@@ -620,20 +314,6 @@ no
 -
 op
 "
-)
-;
-prefs
-.
-setIntPref
-(
-"
-javascript
-.
-options
-.
-gczeal
-"
-0
 )
 ;
 SimpleTest
@@ -652,21 +332,12 @@ false
 "
 Unexpected
 message
+:
 "
-)
-;
-prefs
++
+event
 .
-setIntPref
-(
-"
-javascript
-.
-options
-.
-gczeal
-"
-0
+data
 )
 ;
 SimpleTest
@@ -677,30 +348,67 @@ finish
 ;
 }
 }
+false
+)
 ;
-pool
+var
+gotError
+=
+false
+;
+worker
 .
-errorListener
+onerror
 =
 function
 (
-error
-source
+event
 )
 {
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
+is
 (
+event
+.
+target
+worker
+)
+;
+is
+(
+event
+.
+data
 '
-UniversalXPConnect
+[
+JavaScript
+Error
+:
+"
+uncaught
+exception
+:
+Bad
+message
+:
+asdf
+"
+]
 '
 )
 ;
+gotError
+=
+true
+;
+worker
+.
+onerror
+=
+function
+(
+otherEvent
+)
+{
 ok
 (
 false
@@ -709,21 +417,12 @@ Worker
 had
 an
 error
+:
 "
-)
-;
-prefs
++
+otherEvent
 .
-setIntPref
-(
-"
-javascript
-.
-options
-.
-gczeal
-"
-0
+data
 )
 ;
 SimpleTest
@@ -733,37 +432,14 @@ finish
 )
 ;
 }
+}
 ;
-var
 worker
-=
-pool
-.
-createWorker
-(
-workerScript
-)
-;
-ok
-(
-worker
-"
-Couldn
-'
-t
-make
-worker
-"
-)
-;
-pool
 .
 postMessage
 (
 "
-no
--
-op
+asdf
 "
 )
 ;
