--- a/dom/src/threads/test/test_threadErrors.html
+++ b/dom/src/threads/test/test_threadErrors.html
@@ -218,262 +218,29 @@ text
 javascript
 "
 >
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
-(
-'
-UniversalXPConnect
-'
-)
-;
-var
-prefs
-=
-Components
-.
-classes
-[
-"
-mozilla
-.
-org
-/
-preferences
--
-service
-;
-1
-"
-]
-.
-getService
-(
-Components
-.
-interfaces
-.
-nsIPrefBranch
-)
-;
-/
-/
-prefs
-.
-setIntPref
-(
-"
-javascript
-.
-options
-.
-gczeal
-"
-2
-)
-;
-var
-badWorkerScripts
-=
-[
-/
-/
-Syntax
-error
-"
-function
-messageListener
-(
-message
-source
-)
-{
-"
-+
-"
-for
-(
-var
-i
-=
-0
-;
-i
-<
-10
-)
-{
-}
-"
-+
-"
-}
-"
-+
-"
-"
-/
-/
-Bad
-function
-error
-"
-function
-messageListener
-(
-message
-source
-)
-{
-"
-+
-"
-foopy
-(
-)
-;
-"
-+
-"
-}
-"
-+
-"
-"
-/
-/
-Unhandled
-exception
-in
-body
-"
-function
-messageListener
-(
-message
-source
-)
-{
-"
-+
-"
-}
-"
-+
-"
-throw
-new
-Error
-(
-'
-Bah
-!
-'
-)
-;
-"
-+
-"
-"
-/
-/
-Throwing
-message
-listener
-"
-function
-messageListener
-(
-message
-source
-)
-{
-"
-+
-"
-throw
-'
-Bad
-message
-:
-'
-+
-message
-;
-"
-+
-"
-}
-"
-+
-"
-"
-]
-;
-var
+const
 expectedErrorCount
 =
-badWorkerScripts
-.
-length
+4
 ;
-var
-pool
-=
-navigator
-.
-newWorkerPool
-(
-)
-;
-pool
-.
-messageListener
-=
 function
+messageListener
 (
-message
-source
+event
 )
 {
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
-(
-'
-UniversalXPConnect
-'
-)
-;
-prefs
-.
-setIntPref
-(
-"
-javascript
-.
-options
-.
-gczeal
-"
-0
-)
-;
 ok
 (
 false
 "
 Unexpected
 message
+:
 "
++
+event
+.
+data
 )
 ;
 SimpleTest
@@ -495,36 +262,21 @@ failedWorkers
 [
 ]
 ;
-pool
-.
-errorListener
-=
 function
+errorListener
 (
-error
-source
+event
 )
 {
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
-(
-'
-UniversalXPConnect
-'
-)
-;
 if
 (
 failedWorkers
 .
 indexOf
 (
-source
+event
+.
+target
 )
 !
 =
@@ -532,23 +284,6 @@ source
 1
 )
 {
-dump
-(
-"
-Already
-seen
-worker
-:
-"
-+
-source
-+
-"
-\
-n
-"
-)
-;
 ok
 (
 false
@@ -561,20 +296,6 @@ from
 this
 worker
 "
-)
-;
-prefs
-.
-setIntPref
-(
-"
-javascript
-.
-options
-.
-gczeal
-"
-0
 )
 ;
 SimpleTest
@@ -590,7 +311,9 @@ failedWorkers
 .
 push
 (
-source
+event
+.
+target
 )
 ;
 actualErrorCount
@@ -605,20 +328,6 @@ actualErrorCount
 expectedErrorCount
 )
 {
-prefs
-.
-setIntPref
-(
-"
-javascript
-.
-options
-.
-gczeal
-"
-0
-)
-;
 SimpleTest
 .
 finish
@@ -633,10 +342,11 @@ for
 var
 i
 =
-0
+1
 ;
 i
 <
+=
 expectedErrorCount
 ;
 i
@@ -647,15 +357,32 @@ i
 var
 worker
 =
-pool
-.
-createWorker
+new
+Worker
 (
-badWorkerScripts
-[
+"
+threadErrors_worker
+"
++
 i
-]
++
+"
+.
+js
+"
 )
+;
+worker
+.
+onmessage
+=
+messageListener
+;
+worker
+.
+onerror
+=
+errorListener
 ;
 worker
 .
