--- a/dom/src/threads/test/test_threadTimeouts.html
+++ b/dom/src/threads/test/test_threadTimeouts.html
@@ -218,384 +218,41 @@ text
 javascript
 "
 >
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
-(
-'
-UniversalXPConnect
-'
-)
-;
 var
-prefs
-=
-Components
-.
-classes
-[
-"
-mozilla
-.
-org
-/
-preferences
--
-service
-;
-1
-"
-]
-.
-getService
-(
-Components
-.
-interfaces
-.
-nsIPrefBranch
-)
-;
-/
-/
-prefs
-.
-setIntPref
-(
-"
-javascript
-.
-options
-.
-gczeal
-"
-2
-)
-;
-var
-workerScript
-=
-"
-var
-gTimeoutId
-;
-"
-+
-"
-var
-gTimeoutCount
-=
-0
-;
-"
-+
-"
-var
-gIntervalCount
-=
-0
-;
-"
-+
-"
-"
-+
-"
-function
-timeoutFunc
-(
-)
-{
-"
-+
-"
-if
-(
-+
-+
-gTimeoutCount
->
-1
-)
-{
-"
-+
-"
-throw
-new
-Error
-(
-'
-Timeout
-called
-more
-than
-once
-!
-'
-)
-;
-"
-+
-"
-}
-"
-+
-"
-postMessageToPool
-(
-'
-timeoutFinished
-'
-)
-;
-"
-+
-"
-}
-"
-+
-"
-"
-+
-"
-function
-intervalFunc
-(
-)
-{
-"
-+
-"
-if
-(
-+
-+
-gIntervalCount
-=
-=
-2
-)
-{
-"
-+
-"
-postMessageToPool
-(
-'
-intervalFinished
-'
-)
-;
-"
-+
-"
-}
-"
-+
-"
-}
-"
-+
-"
-"
-+
-"
-function
-messageListener
-(
-message
-source
-)
-{
-"
-+
-"
-switch
-(
-message
-)
-{
-"
-+
-"
-case
-'
-startTimeout
-'
-:
-"
-+
-"
-gTimeoutId
-=
-setTimeout
-(
-timeoutFunc
-5000
-)
-;
-"
-+
-"
-clearTimeout
-(
-gTimeoutId
-)
-;
-"
-+
-"
-gTimeoutId
-=
-setTimeout
-(
-timeoutFunc
-5000
-)
-;
-"
-+
-"
-break
-;
-"
-+
-"
-case
-'
-startInterval
-'
-:
-"
-+
-"
-gTimeoutId
-=
-setInterval
-(
-intervalFunc
-5000
-)
-;
-"
-+
-"
-break
-;
-"
-+
-"
-case
-'
-cancelInterval
-'
-:
-"
-+
-"
-clearInterval
-(
-gTimeoutId
-)
-;
-"
-+
-"
-postMessageToPool
-(
-'
-intervalCanceled
-'
-)
-;
-"
-+
-"
-break
-;
-"
-+
-"
-default
-:
-"
-+
-"
-throw
-'
-Bad
-message
-:
-'
-+
-message
-;
-"
-+
-"
-}
-"
-+
-"
-}
-"
-+
-"
-"
-;
-var
-pool
-=
-navigator
-.
-newWorkerPool
-(
-)
-;
-ok
-(
-pool
-"
-Couldn
-'
-t
-get
 worker
-pool
+=
+new
+Worker
+(
+"
+threadTimeouts_worker
+.
+js
 "
 )
 ;
-pool
+worker
 .
-messageListener
+onmessage
 =
 function
 (
-message
-source
+event
 )
 {
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
+is
 (
-'
-UniversalXPConnect
-'
+event
+.
+target
+worker
 )
 ;
 switch
 (
-message
+event
+.
+data
 )
 {
 case
@@ -603,7 +260,9 @@ case
 timeoutFinished
 "
 :
-source
+event
+.
+target
 .
 postMessage
 (
@@ -619,7 +278,9 @@ case
 intervalFinished
 "
 :
-source
+event
+.
+target
 .
 postMessage
 (
@@ -635,20 +296,6 @@ case
 intervalCanceled
 "
 :
-prefs
-.
-setIntPref
-(
-"
-javascript
-.
-options
-.
-gczeal
-"
-0
-)
-;
 SimpleTest
 .
 finish
@@ -668,20 +315,6 @@ message
 "
 )
 ;
-prefs
-.
-setIntPref
-(
-"
-javascript
-.
-options
-.
-gczeal
-"
-0
-)
-;
 SimpleTest
 .
 finish
@@ -691,27 +324,21 @@ finish
 }
 }
 ;
-pool
+worker
 .
-errorListener
+onerror
 =
 function
 (
-error
-source
+event
 )
 {
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
+is
 (
-'
-UniversalXPConnect
-'
+event
+.
+target
+worker
 )
 ;
 ok
@@ -722,21 +349,12 @@ Worker
 had
 an
 error
+:
 "
-)
-;
-prefs
++
+event
 .
-setIntPref
-(
-"
-javascript
-.
-options
-.
-gczeal
-"
-0
+data
 )
 ;
 SimpleTest
@@ -746,28 +364,6 @@ finish
 )
 ;
 }
-;
-var
-worker
-=
-pool
-.
-createWorker
-(
-workerScript
-)
-;
-ok
-(
-worker
-"
-Couldn
-'
-t
-make
-worker
-"
-)
 ;
 worker
 .
