--- a/dom/src/threads/test/test_xhr.html
+++ b/dom/src/threads/test/test_xhr.html
@@ -223,433 +223,44 @@ text
 javascript
 "
 >
-function
-workerScript
-(
-)
-{
 var
-xhr
+worker
 =
 new
-XMLHttpRequest
+Worker
 (
+"
+xhr_worker
+.
+js
+"
 )
 ;
+worker
+.
+onmessage
+=
 function
-onload
 (
 event
 )
 {
-if
+is
 (
 event
 .
 target
-.
-status
-!
-=
-200
-)
-{
-var
-message
-=
-{
-type
-:
-"
-error
-"
-error
-:
-event
-.
-target
-.
-status
-}
-;
-postMessageToPool
-(
-message
-.
-toSource
-(
-)
+worker
 )
 ;
-}
-var
-message
-=
-{
-type
-:
-"
-load
-"
-data
-:
-xhr
-.
-responseText
-}
-;
-postMessageToPool
-(
-message
-.
-toSource
-(
-)
-)
-;
-}
-xhr
-.
-onload
-=
-onload
-;
-xhr
-.
-addEventListener
-(
-"
-load
-"
-onload
-false
-)
-;
-xhr
-.
-removeEventListener
-(
-"
-load
-"
-onload
-false
-)
-;
-if
-(
-!
-xhr
-.
-onload
-)
-{
-var
-message
-=
-{
-type
-:
-"
-error
-"
-error
-:
-"
-Lost
-message
-listener
-!
-"
-}
-;
-postMessageToPool
-(
-message
-.
-toSource
-(
-)
-)
-;
-}
-xhr
-.
-addEventListener
-(
-"
-error
-"
-function
-(
-event
-)
-{
-var
-message
-=
-{
-type
-:
-"
-error
-"
-error
-:
-event
-.
-target
-.
-status
-}
-;
-postMessageToPool
-(
-message
-.
-toSource
-(
-)
-)
-;
-}
-false
-)
-;
-function
-onprogress
-(
-event
-)
-{
-var
-message
-=
-{
-type
-:
-"
-progress
-"
-current
-:
-event
-.
-loaded
-total
-:
-event
-.
-total
-}
-;
-postMessageToPool
-(
-message
-.
-toSource
-(
-)
-)
-;
-}
-xhr
-.
-addEventListener
-(
-"
-progress
-"
-onprogress
-false
-)
-;
-xhr
-.
-addEventListener
-(
-"
-foopety
-"
-function
-(
-event
-)
-{
-}
-false
-)
-;
-xhr
-.
-removeEventListener
-(
-"
-doopety
-"
-function
-(
-event
-)
-{
-}
-false
-)
-;
-var
-upload
-=
-xhr
-.
-upload
-;
-upload
-.
-onprogress
-=
-function
-(
-event
-)
-{
-}
-;
-upload
-.
-addEventListener
-(
-"
-readystatechange
-"
-function
-(
-event
-)
-{
-}
-false
-)
-;
-upload
-.
-removeEventListener
-(
-"
-readystatechange
-"
-function
-(
-event
-)
-{
-}
-false
-)
-;
-upload
-.
-addEventListener
-(
-"
-load
-"
-function
-(
-event
-)
-{
-}
-false
-)
-;
-upload
-.
-removeEventListener
-(
-"
-readystatechange
-"
-function
-(
-event
-)
-{
-}
-false
-)
-;
-this
-.
-messageListener
-=
-function
-(
-message
-source
-)
-{
-if
-(
-xhr
-.
-readystate
->
-0
-)
-{
-throw
-"
-XHR
-already
-running
-!
-"
-;
-}
-xhr
-.
-open
-(
-"
-GET
-"
-message
-)
-;
-xhr
-.
-send
-(
-null
-)
-;
-}
-}
-var
-pool
-=
-navigator
-.
-newWorkerPool
-(
-)
-;
-pool
-.
-messageListener
-=
-function
-(
-message
-source
-)
-{
 var
 args
 =
 eval
 (
-message
+event
+.
+data
 )
 ;
 switch
@@ -777,16 +388,23 @@ finish
 }
 }
 ;
-pool
+worker
 .
-errorListener
+onerror
 =
 function
 (
-error
-source
+event
 )
 {
+is
+(
+event
+.
+target
+worker
+)
+;
 ok
 (
 false
@@ -798,7 +416,9 @@ error
 :
 "
 +
-error
+event
+.
+data
 )
 ;
 SimpleTest
@@ -808,27 +428,6 @@ finish
 )
 ;
 }
-var
-worker
-=
-pool
-.
-createWorker
-(
-"
-(
-"
-+
-workerScript
-+
-"
-)
-(
-)
-;
-"
-)
-;
 worker
 .
 postMessage
