--- a/dom/src/threads/test/test_importScripts.html
+++ b/dom/src/threads/test/test_importScripts.html
@@ -219,27 +219,32 @@ javascript
 "
 >
 var
-pool
+worker
 =
-navigator
-.
-newWorkerPool
+new
+Worker
 (
+"
+importScripts_worker
+.
+js
+"
 )
 ;
-pool
+worker
 .
-messageListener
+onmessage
 =
 function
 (
-message
-source
+event
 )
 {
 switch
 (
-message
+event
+.
+data
 )
 {
 case
@@ -247,7 +252,7 @@ case
 started
 "
 :
-source
+worker
 .
 postMessage
 (
@@ -294,14 +299,13 @@ finish
 }
 }
 ;
-pool
+worker
 .
-errorListener
+onerror
 =
 function
 (
-error
-source
+event
 )
 {
 ok
@@ -315,7 +319,9 @@ error
 :
 "
 +
-error
+event
+.
+data
 )
 ;
 SimpleTest
@@ -325,20 +331,6 @@ finish
 )
 ;
 }
-var
-worker
-=
-pool
-.
-createWorkerFromURL
-(
-"
-importScripts_worker
-.
-js
-"
-)
-;
 worker
 .
 postMessage
